--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 				<!-- votre canvas et autres joyeusetés -->
 			</div>
 
-			<script src="three.js-master/build/three.js"></script>
-		<script src="three.js-master/examples/js/loaders/OBJLoader.js"></script>
+			<script src="three.js"></script>
+		<script src="OBJLoader.js"></script>
 			<script defer src="js/main.js"></script>
 			<!-- ICI VOUS POUVEZ PLUS MODIFIER -->
 
